# VarysNupitec

./: .gitignore  04. Resumo de Proteções - Bruto.xlsx  04. Resumo de proteções.xlsx  InpiSpider.py  Novo resumos de proteções.xlsx  README.md  bs4spider.py  buscador.py  check_table.py  check_website.py  extrator.py  lista_de_protecoes.txt  lista_prot.txt  pyproject.toml  readme.md  salvar_lista.py
.backup/: 04. Resumo de Proteções - Bruto.xlsx  InpiSpider.py  check_website.py  extrator copy 2.py  extrator copy 4.py  extrator copy.py  extratorpart2.py  lista_prot copy.txt  lista_prot.txt
backup/: 04. Resumo de Proteções - Bruto.xlsx  04. Resumo de proteções.xlsx  04. Resumos de proteções.xlsx  bs4spider.py  exigencias.py  extrator.py  substituir.py
