[tool.poetry]
name = "varysnupitec"
version = "0.2.0"
description = "Programa para identificação de ativos de um determinado titular e atualização de planilha."
authors = ["isfttr <lucas.fernandes.df@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
scrapy = "^2.11.1"
reactor = "^0.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
